Updated to 0.013 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  Test-Fatal-0.006.tar.gz: 52b6c449e8c783cf0457cca49acdddd82e33c1e1
 sources:
-  "Test-Fatal-0.006.tar.gz": 52b6c449e8c783cf0457cca49acdddd82e33c1e1
+  Test-Fatal-0.013.tar.gz: 06db6309768dcdd338591be56ab415eec71a2632
